{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 17,
  "lineage": "98d43445-f7c2-f72e-8032-1bd8b13379ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet-Gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:468263664394:internet-gateway/igw-058f8160fe726daf6",
            "id": "igw-058f8160fe726daf6",
            "owner_id": "468263664394",
            "tags": {
              "Name": "Trial-VPC-IGW"
            },
            "tags_all": {
              "Name": "Trial-VPC-IGW"
            },
            "vpc_id": "vpc-04b1dc5af31995971"
          },
          "dependencies": [
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "Main-Route-Table-Association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01049bcaa4c82c81c",
            "original_route_table_id": "rtb-086c2cac932705c88",
            "route_table_id": "rtb-098ca23dc859a559e",
            "vpc_id": "vpc-04b1dc5af31995971"
          },
          "dependencies": [
            "aws_route_table.RTB-12",
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "TrialVPC-1-NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:468263664394:network-acl/acl-035f1ae8823b973e1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-035f1ae8823b973e1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "468263664394",
            "subnet_ids": [
              "subnet-0a7b10f6f8cc4214e"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-04b1dc5af31995971"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.PublicSubnet",
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Route-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058f8160fe726daf6",
            "id": "r-rtb-098ca23dc859a559e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098ca23dc859a559e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet-Gateway-1",
            "aws_route_table.RTB-12",
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:468263664394:route-table/rtb-098ca23dc859a559e",
            "id": "rtb-098ca23dc859a559e",
            "owner_id": "468263664394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058f8160fe726daf6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table-1"
            },
            "tags_all": {
              "Name": "Route-Table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b1dc5af31995971"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:468263664394:subnet/subnet-0ab4b753135062b15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab4b753135062b15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468263664394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-04b1dc5af31995971"
          },
          "dependencies": [
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:468263664394:subnet/subnet-0a7b10f6f8cc4214e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7b10f6f8cc4214e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468263664394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-04b1dc5af31995971"
          },
          "dependencies": [
            "aws_vpc.Trial-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Trial-VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:468263664394:vpc/vpc-04b1dc5af31995971",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7fb77e906b1f097",
            "default_route_table_id": "rtb-098ca23dc859a559e",
            "default_security_group_id": "sg-054b21ccfeabbfcb3",
            "dhcp_options_id": "dopt-0689586fd3c7ae8d6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b1dc5af31995971",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098ca23dc859a559e",
            "owner_id": "468263664394",
            "tags": {
              "Name": "Trial-VPC-1"
            },
            "tags_all": {
              "Name": "Trial-VPC-1"
            }
          }
        }
      ]
    }
  ]
}